--- a/SMS/SMSapp/templates/home.html
+++ b/SMS/SMSapp/templates/home.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- add icon to web browser tab -->
+     <link rel="shortcut icon" type="lspu-icon" href="{% static 'icons/logo.png' %}">
     <!-- for the sidebar toggle -->
     <script src="{% static 'script.js' %}"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
