--- a/SMS/SMSapp/templates/studgroup.html
+++ b/SMS/SMSapp/templates/studgroup.html
@@ -6,6 +6,8 @@
     <title>Student Grouping and Profiling</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="{% static 'script.js' %}"></script>
+    <!-- add icon to web browser tab -->
+    <link rel="shortcut icon" type="lspu-icon" href="{% static 'icons/logo.png' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
